minor updates and renaming.